Added section for player scores

--- a/assets/index.html
+++ b/assets/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-
+    <section id="result">
+        <div id="score">
+            <span id="player1-score" class="points">0</span>
+            :
+            <span id="player2-score" class="points">0</span>
+        </div>
+        <p id="round-message">Choose your option</p>
+    </section>
 </body>
 
 </html>
