This section will display the selected option

--- a/assets/index.html
+++ b/assets/index.html
@@ -17,6 +17,14 @@
         </div>
         <p id="round-message">Choose your option</p>
     </section>
+
+    <section id="player1" class="players">
+        <span class="name">Player1</span>
+        <div class="selected-option">
+            <span class="option" data-index="0"> </span>
+        </div>
+    </section>
+
 </body>
 
 </html>
