Seection added for lizard/paper image and selection

--- a/assets/index.html
+++ b/assets/index.html
@@ -23,6 +23,15 @@
         <div class="selected-option">
             <span class="option" data-index="0"> </span>
         </div>
+        <div class="available-options">
+            <span class="option" data-index="0">
+                <img src="" alt="Lizard" title="Lizard" />
+            </span>
+            <span class="option" data-index="1">
+                <img src="" alt="Paper" title="Paper" />
+            </span>
+
+        </div>
     </section>
 
 </body>
