--- a/assets/index.html
+++ b/assets/index.html
@@ -30,7 +30,15 @@
             <span class="option" data-index="1">
                 <img src="" alt="Paper" title="Paper" />
             </span>
-
+            <span class="option" data-index="2">
+                <img src="" alt="Rock" title="Rock" />
+            </span>
+            <span class="option" data-index="3">
+                <img src="" alt="Scissor" title="Scissor" />
+            </span>
+            <span class="option" data-index="4">
+                <img src="" alt="Spock" title="Spock" />
+            </span>
         </div>
     </section>
 
