--- a/assets/index.html
+++ b/assets/index.html
@@ -9,61 +9,67 @@
 </head>
 
 <body>
-    <section id="result">
-        <div id="score">
-            <span id="player1-score" class="points">0</span>
-            :
-            <span id="player2-score" class="points">0</span>
-        </div>
-        <p id="round-message">Choose your option</p>
-    </section>
+    <main>
+        <section id="result">
+            <div id="score">
+                <span id="player1-score" class="points">0</span>
+                :
+                <span id="player2-score" class="points">0</span>
+            </div>
+            <p id="round-message">Choose your option</p>
+        </section>
 
-    <section id="player1" class="players">
-        <span class="name">Player1</span>
-        <div class="selected-option">
-            <span class="option" data-index="0"> </span>
-        </div>
-        <div class="available-options">
-            <span class="option" data-index="0">
-                <img src="" alt="Lizard" title="Lizard" />
-            </span>
-            <span class="option" data-index="1">
-                <img src="" alt="Paper" title="Paper" />
-            </span>
-            <span class="option" data-index="2">
-                <img src="" alt="Rock" title="Rock" />
-            </span>
-            <span class="option" data-index="3">
-                <img src="" alt="Scissor" title="Scissor" />
-            </span>
-            <span class="option" data-index="4">
-                <img src="" alt="Spock" title="Spock" />
-            </span>
-        </div>
-    </section>
-    <section id="player2" class="players">
-        <span class="name">Bot</span>
-        <div class="selected-option">
-            <span class="option" data-index="0"> </span>
-        </div>
-        <div class="available-options">
-            <span class="option" data-index="0">
-                <img src="" alt="Lizard" title="Lizard" />
-            </span>
-            <span class="option" data-index="1">
-                <img src="" alt="Paper" title="Paper" />
-            </span>
-            <span class="option" data-index="2">
-                <img src="" alt="Rock" title="Rock" />
-            </span>
-            <span class="option" data-index="3">
-                <img src="" alt="Scissor" title="Scissor" />
-            </span>
-            <span class="option" data-index="4">
-                <img src="" alt="Spock" title="Spock" />
-            </span>
-        </div>
-    </section>
+        <section id="player1" class="players">
+            <span class="name">Player1</span>
+            <div class="selected-option">
+                <span class="option" data-index="0"> </span>
+            </div>
+            <div class="available-options">
+                <span class="option" data-index="0">
+                    <img src="" alt="Lizard" title="Lizard" />
+                </span>
+                <span class="option" data-index="1">
+                    <img src="" alt="Paper" title="Paper" />
+                </span>
+                <span class="option" data-index="2">
+                    <img src="" alt="Rock" title="Rock" />
+                </span>
+                <span class="option" data-index="3">
+                    <img src="" alt="Scissor" title="Scissor" />
+                </span>
+                <span class="option" data-index="4">
+                    <img src="" alt="Spock" title="Spock" />
+                </span>
+            </div>
+        </section>
+        <section id="player2" class="players">
+            <span class="name">Bot</span>
+            <div class="selected-option">
+                <span class="option" data-index="0"> </span>
+            </div>
+            <div class="available-options">
+                <span class="option" data-index="0">
+                    <img src="" alt="Lizard" title="Lizard" />
+                </span>
+                <span class="option" data-index="1">
+                    <img src="" alt="Paper" title="Paper" />
+                </span>
+                <span class="option" data-index="2">
+                    <img src="" alt="Rock" title="Rock" />
+                </span>
+                <span class="option" data-index="3">
+                    <img src="" alt="Scissor" title="Scissor" />
+                </span>
+                <span class="option" data-index="4">
+                    <img src="" alt="Spock" title="Spock" />
+                </span>
+            </div>
+        </section>
+        <footer>
+            <span class="reset"><span>Reset</span></span>
+        </footer>
+    </main>
+    <script src="./index.js"></script>
 </body>
 
 </html>
