--- a/assets/index.html
+++ b/assets/index.html
@@ -27,19 +27,19 @@
             </div>
             <div class="available-options">
                 <span class="option" data-index="0">
-                    <img src="" alt="Lizard" title="Lizard" />
+                    <img src="images\lizard_image.png" alt="Lizard" title="Lizard" />
                 </span>
                 <span class="option" data-index="1">
-                    <img src="" alt="Paper" title="Paper" />
+                    <img src="images/paper_image.png" alt="Paper" title="Paper" />
                 </span>
                 <span class="option" data-index="2">
-                    <img src="" alt="Rock" title="Rock" />
+                    <img src="images/rock_image.png" alt="Rock" title="Rock" />
                 </span>
                 <span class="option" data-index="3">
-                    <img src="" alt="Scissor" title="Scissor" />
+                    <img src="images/scissors_image.png" alt="Scissor" title="Scissor" />
                 </span>
                 <span class="option" data-index="4">
-                    <img src="" alt="Spock" title="Spock" />
+                    <img src="images/spock_image.png" alt="Spock" title="Spock" />
                 </span>
             </div>
         </section>
