Added headerwith writing and centered

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,6 +8,11 @@
     <title>Rock, Paper, Scissors, Lizard, Spock!</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <h1>
+        Rock, Paper, Scissors, Lizard, Spock!
+    </h1>
+</header>
 
 <body>
     <main>
