Added footer, enclosed reset styling.

--- a/assets/index.html
+++ b/assets/index.html
@@ -73,6 +73,9 @@
         </section>
         <span class="reset"><span>Reset</span></span>
     </main>
+    <footer>
+
+    </footer>
     <script src="script.js"></script>
 </body>
 
