--- a/assets/index.html
+++ b/assets/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors, Lizard, Spock!</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <header>
     <h1>
